[workspace]
# Rust package
members = [
    "lakestream",
    "lakestream-cli",
    "lakestream-web",
]

# required to workaround the tokio-mio wasm bug
# resolver = "2"
# note current tokio wasm-browser support still limited, see:
# https://docs.rs/tokio/latest/tokio/#wasm-support

# Python interface to lakestream
# exclude to prevent publishing to crates.io
exclude = [
    "lakestream-py",
]


[profile.release]
lto = true
opt-level = "z"
debug = false
rpath = false
