[workspace]
# Rust package
members = [
    "xlatti",
    "xlatti-cli",
    "xlatti-web",
]

# required to workaround the tokio-mio wasm bug
# resolver = "2"
# note current tokio wasm-browser support still limited, see:
# https://docs.rs/tokio/latest/tokio/#wasm-support

# Python interface to xlatti
# exclude to prevent publishing to crates.io
exclude = [
    "xlatti-py",
]

[profile.release]
lto = true
opt-level = "z"
debug = false
rpath = false
panic = "abort"
