[workspace]
# Rust package
members = [
    "lumni",
    "lumni-web",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# required to workaround the tokio-mio wasm bug
# resolver = "2"
# note current tokio wasm-browser support still limited, see:
# https://docs.rs/tokio/latest/tokio/#wasm-support

# Python interface to lumni
# exclude to prevent publishing to crates.io
exclude = [
    "lumni-py",
]

[profile.release]
lto = true
opt-level = "z"
debug = false
rpath = false
panic = "abort"
