[package]
name = "lakestream_py"
version = "0.0.0-0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["macros", "extension-module"] }
lakestream = { path = "../lakestream" }

[build-dependencies]
maturin = "0.12"

[package.metadata.maturin]
project-name = "lakestream"

[profile.release]
lto = true
