[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "lakestream"
version = "0.0.0-0"
description = "Python interface for Lakestream"
readme = "README.rst"
requires-python = ">=3.7"
url = "https://lakestream.dev"
documentation = "https://lakestream.dev/python_api"
repository = "https://github.com/serverlessnext/lakestream"
keywords = ["serverless", "data", "api"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[dependencies]

[project.license]
text = "MIT"

[[project.maintainers]]
name = "Anthony Potappel"
email = "aprxi@lakestream.dev"

[tool.maturin]
module-name = "lakestream"
