[package]
name = "lakestream-web"
# version is auto-updated via lakestream/build.rs
version = "0.0.4-alpha"
edition = "2021"

[dependencies]
lakestream = { path = "../lakestream" }
leptos = { version = "0.2.5"}
console_log = "1"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
leptos_meta = { version = "0.2", features = ["csr"] }
leptos_router = { version = "0.2", features = ["csr"]  }
web-sys = { version = "0.3", features = ['Storage', 'Request', 'RequestInit', 'RequestMode', 'Headers', 'Window', 'Response', 'console', 'Crypto', 'CryptoKey', 'SubtleCrypto', 'Pbkdf2Params', 'AesKeyGenParams', 'AesGcmParams', 'Algorithm'] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"

base64 = "0.21"
data-encoding = "2.3"
md5 = "0.7"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
