[package]
name = "lakestream-web"
# version is auto-updated via lakestream/build.rs
version = "0.0.4-alpha"
edition = "2021"

[dependencies]
lakestream = { path = "../lakestream" }
leptos = { version = "0.3"}
leptos_meta = { version = "0.3", features = ["csr"] }
leptos_router = { version = "0.3", features = ["csr"]  }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
        'Storage', 'Request', 'RequestInit', 'RequestMode', 'Headers',
        'Window', 'Response', 'console', 'Crypto', 'CryptoKey',
        'SubtleCrypto', 'Pbkdf2Params', 'AesKeyGenParams',
        'AesGcmParams', 'Algorithm', 'History'
]}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
blake3 = "1.3"
base64 = "0.21"
async-trait = "0.1"
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }

uuid = { version = "1", features = ["v4", "js", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
