[package]
name = "lakestream-web"
# version is auto-updated via lakestream/build.rs
version = "0.0.4-alpha"
edition = "2021"

[dependencies]
lakestream = { path = "../lakestream" }
localencrypt = { version = "0.0.4" }
leptos = { version = "0.3"}
leptos_meta = { version = "0.3", features = ["csr"] }
leptos_router = { version = "0.3", features = ["csr"]  }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ['Window']}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }
uuid = { version = "1", features = ["v4", "js"] }
serde_json = "1.0"

# debug-assertions
async-std = { version = "1.12", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"

[features]
default = []
debug-assertions = ["async-std/default"]
