[package]
name = "lakestream"
version = "0.0.2-pre"
edition = "2021"
description = "Portable file-utility for object-stores"
license = "MIT"

[lib]
name = "lakestream"
path = "src/lib.rs"

[[bin]]
name = "lakestream"
path = "src/main.rs"

[dependencies]
percent-encoding = { version = "2.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
hmac = { version = "0.11", default-features = false }
sha2 = { version = "0.9.9", default-features = false }
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
regex = { version = "1.7", default-features = false, features = ["std", "unicode"] }
itertools = "0.10"
serde-xml-rs = "0.6"
url = "2.3"
clap = { version = "4.2" , default-features = false, features = ["std", "help"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["parsing"]}
ureq = { version = "2.2", default-features = false, features = ["tls"]}

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# js-sys = "0.3"
# web-sys = { version = "0.3", features = ['Request', 'RequestInit', 'RequestMode', 'Headers', 'Window', 'Response', 'console'] }
# wasm-bindgen = "0.2.84"
# wasm-bindgen-futures = "0.4"

