[package]
name = "lakestream"
version = "0.0.3-alpha"
authors = ["Anthony Potappel <aprxi@lakestream.dev>"]
edition = "2021"

description = "Portable file-utility for object-stores"
documentation = "https://docs.rs/lakestream"
homepage = "https://lakestream.dev"
repository = "https://github.com/serverlessnext/lakestream"
readme = "../README.rst"
license = "MIT"

[lib]
name = "lakestream"
path = "src/lib.rs"

[dependencies]
percent-encoding = { version = "2.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
hmac = { version = "0.11", default-features = false }
sha2 = { version = "0.9.9", default-features = false }
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
regex = { version = "1.7", default-features = false, features = ["std", "unicode"] }
url = "2.3"
log = "0.4"
itertools = "0.10"
serde-xml-rs = "0.6"
async-trait = "0.1"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["parsing"]}
ureq = { version = "2.2", default-features = false, features = ["tls"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ['Request', 'RequestInit', 'RequestMode', 'Headers', 'Window', 'Response', 'console'] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.84"
