[package]
name = "localencrypt"
version = "0.0.1"
authors = ["Anthony Potappel <aprxi@lakestream.dev>"]
edition = "2021"

description = "Tool to encrypt data in browser local storage"
documentation = "https://docs.rs/localencrypt"
homepage = "https://github.com/serverlessnext/localencrypt"
repository = "https://github.com/serverlessnext/localencrypt"
readme = "../README.rst"
license = "MIT"

[lib]
name = "localencrypt"
path = "src/lib.rs"

[dependencies]
web-sys = { version = "0.3", features = [
        'Storage', 'Window', 'Crypto', 'CryptoKey',
        'SubtleCrypto', 'Pbkdf2Params', 'AesKeyGenParams',
        'AesGcmParams', 'Algorithm',
]}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
blake3 = "1.3"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_log = "1"
log = "0.4"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
