[package]
name = "lumni_cli"
# version is auto-updated via lumni/build.rs
version = "0.0.4-alpha"
edition.workspace = true
license.workspace = true

[lib]
name = "lumni_cli"
path = "src/lib.rs"

[[bin]]
name = "lumni"
path = "src/main.rs"

[dependencies]
env_logger = "0.9"
log = "0.4"
lumni = { path = "../lumni" }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2" , default-features = false, features = ["std", "help"]}
futures = { version = "0.3", default-features = false }
