[package]
name = "lumni_web"
# version is auto-updated via lumni/build.rs
version = "0.0.5"
edition.workspace = true
license.workspace = true

[dependencies]
lumni = { path = "../lumni", default-features = false, features = ["web"] }
localencrypt = { version = "0.0.4" }
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr", "nightly"]  }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ['Window']}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }
uuid = { version = "1", features = ["v4", "js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# debug-assertions
async-std = { version = "1.12", default-features = false, optional = true }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[features]
default = []
debug-assertions = ["async-std/default"]
