[package]
name = "lumni"
# version is auto-updated via lumni/build.rs
version = "0.0.5"
authors = ["Anthony Potappel <mail@aprxi.com>"]
edition.workspace = true
license.workspace = true

description = "Portable file-utility for object-stores"
documentation = "https://docs.rs/lumni"
homepage = "https://lumnidata.com"
repository = "https://github.com/serverlessnext/lumni"
readme = "../README.rst"

[lib]
name = "lumni"
path = "src/lib.rs"

[[bin]]
name = "lumni"
path = "src/main.rs"

[dependencies]
percent-encoding = { version = "2.1", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hmac = { version = "0.11", default-features = false }
sha2 = { version = "0.9.9", default-features = false }
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }
futures = { version = "0.3", default-features = false }
bytes = { version = "1.4", default-features = false }
sqlparser = { version = "0.43", default-features = false}
url = "2.3"
log = "0.4"
serde-xml-rs = "0.6"
async-trait = "0.1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["parsing"]}
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"]}
hyper-tls = "0.6"
http-body-util = "0.1.1"
hyper-util = { version = "0.1", features = ["full"]}
openssl-sys = { version = "0.9", features = ["vendored"] }
anyhow = "1.0"
# cli-dependencies
env_logger = "0.9"
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2" , default-features = false, features = ["std", "help"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ['Request', 'RequestInit', 'RequestMode', 'Headers', 'Window', 'Response', 'console'] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.84"
anyhow = "1.0"

[build-dependencies]
toml_edit = "0.22"

[dev-dependencies]
# keep tokio version+features in sync with lumni-cli
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros"] }
tempfile = "3.5.0"

