[package]
name = "lumni"
# version is auto-updated via lumni/build.rs
version = "0.0.5-pre"
authors = ["Anthony Potappel <mail@aprxi.com>"]
edition.workspace = true
license.workspace = true

description = "Portable file-utility for object-stores"
documentation = "https://docs.rs/lumni"
homepage = "https://lumnidata.com"
repository = "https://github.com/serverlessnext/lumni"
readme = "../README.rst"

[lib]
name = "lumni"
path = "src/lib.rs"

[[bin]]
name = "lumni"
path = "src/main.rs"


[features]
default = ["http_client", "cli"]
http_client = ["hyper", "hyper-tls", "http-body-util", "hyper-util"]
cli = ["env_logger", "tokio", "clap", "crossterm", "ratatui", "arboard" ]
web = ["console_log"]

[dependencies]
percent-encoding = { version = "2.3", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hmac = { version = "0.11", default-features = false }
sha2 = { version = "0.9.9", default-features = false }
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }
futures = { version = "0.3" } # , default-features = false 
bytes = { version = "1.4", default-features = false }
sqlparser = { version = "0.43", default-features = false}
url = "2.3"
serde-xml-rs = "0.6"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1.0"
log = { version = "0.4" }
libc = "0.2"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "default-fancy"] }
crc32fast = { version = "1.4" }
rusqlite = { version = "0.31" }
lazy_static = { version = "1.5" }
rayon = { version = "1.10" }
crossbeam-channel = { version = "0.5" }
globset = { version = "0.4" }

# CLI
env_logger = { version = "0.9", optional = true }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros", "signal"], optional = true }
# tokio = { version = "1.12", default-features = false, features = ["full"], optional = true }
clap = { version = "4.2" , default-features = false, features = ["std", "help"], optional = true }
crossterm = { version = "0.27", optional = true }
ratatui = { version = ">=0.26.0, <1", default-features = false, features = ["crossterm"], optional = true }
arboard = { version = "3.2", default-features = false, optional = true }

# WEB 
console_log = { version = "1", optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3", features = ["parsing"]}

# feature: http-client 
hyper = { version = "1", default-features = false, features = ["client", "http1", "http2"], optional = true }
hyper-tls = { version = "0.6", optional = true }
http-body-util = { version = "0.1.1", optional = true }
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ['Request', 'RequestInit', 'RequestMode', 'Headers', 'Window', 'Response', 'console'] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.84"

[build-dependencies]
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }

[dev-dependencies]
# keep tokio version+features in sync with lumni-cli
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros"] }
tempfile = "3.5.0"

