[package]
name = "stringvault"
version = "0.0.1"
edition = "2021"


[lib]
name = "stringvault"
path = "src/lib.rs"

[dependencies]
web-sys = { version = "0.3", features = [
        'Storage', 'Window', 'Crypto', 'CryptoKey',
        'SubtleCrypto', 'Pbkdf2Params', 'AesKeyGenParams',
        'AesGcmParams', 'Algorithm',
]}
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
blake3 = "1.3"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
