[package]
name = "xlatti_py"
# version is auto-updated via xlatti/build.rs
version = "0.0.4-alpha"
edition.workspace = true
license.workspace = true


[dependencies]
pyo3 = { version = "0.18", features = ["macros", "extension-module"] }
tokio = { version = "1", default-features = false }

xlatti = { path = "../xlatti" }
xlatti-cli = { path = "../xlatti-cli" }

[build-dependencies]
maturin = "0.12"

[package.metadata.maturin]
project-name = "xlatti"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
