[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "xlatti"
version = "0.0.0-0"
description = "Python interface for xlatti"
readme = "README.rst"
requires-python = ">=3.7"
url = "https://xlatti.com"
documentation = "https://xlatti.com/python_api"
repository = "https://github.com/serverlessnext/xlatti"
keywords = ["serverless", "data", "api"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[dependencies]

[project.license]
text = "Apache-2.0"

[[project.maintainers]]
name = "Anthony Potappel"
email = "mail@aprxi.com"

[tool.maturin]
module-name = "xlatti"
