[package]
name = "prompt"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "prompt"
path = "src/main.rs"


[dependencies]
env_logger = { version = "0.9" }
tokio = { version = "1.12", default-features = false, features = ["rt-multi-thread", "macros"] }
clap = { version = "4.2" , default-features = false, features = ["std", "help"] }
crossterm = { version = "0.27" }
ratatui = { version = ">=0.27.0, <1", default-features = false, features = ["crossterm"] }
arboard = { version = "3.2", default-features = false }

lumni = { git = "https://github.com/serverlessnext/lumni", branch = "main" }


serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bytes = { version = "1.4", default-features = false }
serde_yaml = "0.9"
log = { version = "0.4" }


[build-dependencies]
regex = { version = "1.8", default-features = false, features = ["std", "unicode"] }

# required to prevent app getting into root workspace
[workspace]